# device-tester

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  WindowsHiDPI.manifest  version.hpp.in
app/src/: application.cpp  application.hpp  application_vulkan.cpp  application_vulkan.hpp  fonts.cpp  fonts.hpp  icon.cpp  icon.hpp  main.cpp
app/src/windows/: raw_data_win.cpp  raw_data_win.hpp
cmake/: pack.cmake
docs/architecture/: top_level.puml
libs/: CMakeLists.txt
libs/gui-common/: CMakeLists.txt
libs/gui-common/include/gui-common/: IconsFontAwesome4.hpp  fonts.hpp  window.hpp  window_manager.hpp
libs/gui-common/src/: fonts.cpp  window.cpp  window_manager.cpp
libs/gui-libcon/: CMakeLists.txt
libs/gui-libcon/include/gui-libcon/: connection_manager_win.hpp  connection_win.hpp  tcp_client_win.hpp  tcp_server_win.hpp
libs/gui-libcon/src/: coap_client_win.cpp  coap_client_win.hpp  connection_manager_win.cpp  connection_win.cpp  gui_elements.cpp  gui_elements.hpp  raw_data_win.cpp  raw_data_win.hpp  serial_win.cpp  serial_win.hpp  tcp_client_win.cpp  tcp_client_win.hpp  tcp_server_win.cpp  tcp_server_win.hpp  udp_con_win.cpp  udp_con_win.hpp
libs/gui-plugins/: CMakeLists.txt
libs/gui-plugins/include/: plugin_test.hpp
libs/gui-plugins/include/gui-plugins/: plugin_manager_win.hpp
libs/gui-plugins/src/: plugin_manager_win.cpp  plugin_test.cpp
libs/gui-widgets/: CMakeLists.txt
libs/libcon/: CMakeLists.txt
libs/libcon/include/libcon/: coap_client.hpp  connection.hpp  manager.hpp  serial.hpp  tcp_client.hpp  tcp_connection.hpp  tcp_server.hpp  types.hpp  udp_connection.hpp
libs/libcon/src/: basic_client.cpp  basic_client.hpp  coap_client.cpp  coap_state.cpp  coap_state.hpp  connection.cpp  manager.cpp  manager_impl.cpp  manager_impl.hpp  receiver.cpp  receiver.hpp  ring_buffer.hpp  serial.cpp  tcp_client.cpp  tcp_connection.cpp  tcp_server.cpp  udp_connection.cpp  writer.cpp  writer.hpp
libs/libplg/: CMakeLists.txt
libs/libplg/include/libplg/: init.hpp  plugin_manager.hpp
libs/libplg/src/: init.cpp  plugin_manager.cpp
libs/plugin_base/: CMakeLists.txt
libs/plugin_base/include/: plugin.hpp
plugins/: CMakeLists.txt
plugins/lua_base/: CMakeLists.txt
plugins/lua_base/include/libplglua/: lua_plugin.hpp
plugins/lua_base/include/lua_base/: lua_base.hpp
plugins/lua_base/my_plugins/: connection_setup.lua  led_plugin.lua
plugins/lua_base/src/: lua_base.cpp  lua_gui_bindings.cpp  lua_gui_bindings.hpp  lua_plugin.cpp  lua_plugin.hpp
